tests/test_input_files/good/test_good_expr_stmt_3.punkt
function f <> -> void {
	println "good".
}

main {
	f().
}
