tests/test_input_files/bad/test_bad_return_stmt_12.punkt
function f <> -> int {
  if true
    println "a".
}

main {
  f().
}
